# fastapi_demo

./: pyproject.toml  taskfile.yaml
.github/workflows/: ci.yaml
demo/: main.py
tasks/: taskfile.init.yaml  taskfile.lint.yaml
tests/: test_example.py  test_query.py
