[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Hayato Sasaki <h.sasaki.ynu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
strawberry-graphql = {extras = ["fastapi"], version = "^0.219.2"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
ruff-lsp = "^0.0.52"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
